# 2DVonKarman

./: AI-2D-Turbo-Von-Karman.txt  LICENSE  README.md  pyproject.toml  tests_smoke.py
turbosim/: __init__.py  app.py  ascii_art.py  backend.py  colormaps.py  gui.py  render.py  solver.py
