[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turbosim"
version = "0.1.0"
description = "2D decaying turbulence pseudo-spectral solver with a PySide6 GUI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "turbosim" }]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "PySide6>=6.7",
]

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=14.0.1; sys_platform != 'darwin'",
  "fastrlock>=0.8; sys_platform != 'darwin'"
]

[project.scripts]
simulation = "turbosim.app:main"
simulation_ascii = "turbosim.ascii_art:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["turbosim"]
