[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vonkarman"
version = "0.1.0"
description = "Von Karman Vortex Street"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.4.4,<3",
    "scipy>=1.17.1,<2",
    "PySide6>=6.11.0,<7",
]

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=14.0.1; sys_platform != 'darwin'",
  "fastrlock>=0.8; sys_platform != 'darwin'"
]

[project.scripts]
simulation = "turbosim.app:main"
simulation_ascii = "turbosim.ascii_art:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["turbosim"]
