[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mannetroll-vonkarman"
version = "0.1.0"
description = "Von Karman Vortex Street"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Torbjörn Sjögren" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=2.4.4,<3",
    "scipy>=1.17.1,<2",
    "PySide6>=6.11.0,<7",
]

[project.urls]
Homepage = "https://github.com/mannetroll/2DVonKarman"
Repository = "https://github.com/mannetroll/2DVonKarman"

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=14.0.1; sys_platform != 'darwin'",
  "fastrlock>=0.8; sys_platform != 'darwin'"
]

[project.scripts]
simulation = "turbosim.app:main"
simulation_ascii = "turbosim.ascii_art:main"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=8.0",
    "twine>=6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["turbosim"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude",
    ".idea",
    ".python-version",
    "build.log",
    "*.txt",
]
